# DynamicsAX

./: .gitignore  README.md  RabbitConnection.md  SETUP.md  TECHNICAL_PROPOSAL.md  TS_GTIN_IntegrationAX2012.md  VERSION_LOG.md  comment_rules.mdc  commentmeta.json  develop.md  fix_mojibake.py  koda.md  md2docx.py  pyproject.toml  quality_review.md  requirements.txt  test_refactoring.py  xpo_delete.py  xpo_parser.py  xpo_writer.py  Разработка промпта.txt
.cursor/: mcp.json
AOT_cus/: AxMIKru.ald
NewProject/: 0191358208_dropidshipped_M_WH2.xml  0191358209_ordershipped_M_WH2.xml  dropidshipped9_SU86148833.xml  ordershipped9_SU86148836.xml
RabbitAnalysis/: analysis_output.txt  analyze_rabbit.py  analyze_rabbit_detailed.py  analyze_xpo_format.py  explore_db.py  full_analysis.py  full_analysis_output.txt  search_rabbit_xpo.py
UtilsParserWriter/: export_class_xpo.py  fix_mojibake.py  merge_xpo_04_from_01wr.py  normalize_xpp_indent.py  test_refactoring.py
XPO/: AxMIKru.ald  Class_JobCheckBatchOrVolumeGradeRunBase.xpo  Class_JobCheckBatchOrVolumeGradeRunBase_WR.xpo  SharedProject_MIK_INT_000002316_01.xpo  SharedProject_MIK_INT_000002316_01_WR.xpo
context7/: __init__.py  __main__.py
indexXPO_cus/: xpo_indexer_sqlite.py
mcp_server/: DIAGNOSTICS.md  README.md  README_CURSOR.md  __init__.py  check_server.py  commentmeta.py  label_loader.py  parser_integration.py  server.py  simple_server.py  test_mcp_protocol.py  test_modules.py  test_server_init.py  test_stdio.py  work_log.md  xpo_reader.py  xpo_reader.py.bak
parserXPO/: CHANGED_GTIN.txt  extract_methods_from_xpo.py
(+98 files in other folders)
