[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "context7"
version = "0.1.0"
description = "MCP server wrapper for Dynamics AX utilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["mcp"]

[project.scripts]
context7 = "context7.__main__:main"

[tool.setuptools.packages.find]
include = ["context7", "mcp_server"]

